--- a/config.toml
+++ b/config.toml
@@ -2,30 +2,35 @@
 [providers.ollama-qwen]
 endpoint = "http://localhost:11434"
 model = "qwen3:8b"
-temperature = 0.7
+temperature = 0.3
 
 [providers.ollama-qwen-small]
 endpoint = "http://localhost:11434"
 model = "qwen3:4b"
-temperature = 0.7
+temperature = 0.3
 
 [providers.ollama-llama]
 endpoint = "http://localhost:11434"
 model = "llama3.1:8b"
-temperature = 0.7
+temperature = 0.3
+
+[providers.mfd-deepseek]
+endpoint = "http://localhost:11434"
+model = "MFDoom/deepseek-r1-tool-calling:14b"
+temperature = 0.3
 
 # OpenCode Zen providers (cloud)
 [providers.zen-nano]
 endpoint = "https://opencode.ai/zen/v1"
 model = "gpt-5-nano"
 api_key_name = "opencode_zen"
-temperature = 0.7
+temperature = 0.3
 
 [providers.zen-pickle]
 endpoint = "https://opencode.ai/zen/v1"
 model = "big-pickle"
 api_key_name = "opencode_zen"
-temperature = 0.7
+temperature = 0.3
 
 [mcp]
 upstream = "https://game.spacemolt.com/mcp"
