--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,6 @@
+# Default provider (optional - if not set, first provider in map is used)
+default_provider = "zen-nano"
+
 # Ollama providers (local)
 [providers.ollama-qwen]
 endpoint = "http://localhost:11434"
